# Photo-Editor

./: CMakeLists.txt  README.md  main.cpp
src/: app.cpp  main.cpp
src/core/: image_processor.cpp  image_processor.h
src/core/ai/: background_remover.cpp  background_remover.h
src/core/database/: project_repository.cpp  project_repository.h  settings_repository.cpp  settings_repository.h
src/tests/: CMakeLists.txt  test_image_processor.cpp
src/ui/: canvas_panel.cpp  canvas_panel.h  create_toolbar.cpp  crop_tool.cpp  crop_tool.h  main_frame.cpp  main_frame.h  main_frame_functions.cpp  main_window.cpp
